# calcvox

./: .astylerc.json  .clang-format  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  Calcvox.sln  README.MD  justfile  main.py  platformio.ini  pyproject.toml  readme.md  speechlight.nuitka-package.config.yml
Calcvox/: Calcvox.csproj  MainForm.cs  NonFocusableButton.cs
Calcvox.Gtk/: Calcvox.Gtk.csproj  Program.cs
Calcvox.Mac/: Calcvox.Mac.csproj  Info.plist  Program.cs
Calcvox.WinForms/: Calcvox.WinForms.csproj  Program.cs
calcvox/: calc_button.py  calculator.py  history.py  history_dialog.py  main_window.py
desktop/: Calcvox.pb  Eval.pbi  main.py  pyproject.toml
desktop/calcvox/: app.py  calc_button.py  main_window.py  speech.py
platformio/: .clang-format  .gitignore
platformio/src/: calcvox.h  calcvox.ino
src/: calcvox.cpp  calcvox.h  calcvox.ino  history.cpp  history.h  history.ino  menu.cpp  menu.h  menu.ino  pins.h  speech_handler.cpp  speech_handler.h  test-suite.cpp
