[project]
name = "calcvox"
version = "0.1.0"
description = "Open-source, light-weight talking calculator."
requires-python = ">=3.13"
dependencies = [
    "accessible-output2>=0.17",
    "sympy>=1.14.0",
    "wxpython>=4.2.3",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.12",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "ruff>=0.12.5",
    "rust-just>=1.42.4",
]

[tool.ruff]
fix = true
line-length = 0
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "C4",
    "SIM",
    "ARG",
    "RUF",
]

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
line-ending = "lf"
